# src/module/order_service/model/order_model.go
@@ -5,6 +5,7 @@ import (
 
 	part_model "github.com/Mirsadikovv/idoctor_platform/src/module/part_service/model"
 	problem_model "github.com/Mirsadikovv/idoctor_platform/src/module/problem_service/model"
+	user_model "github.com/Mirsadikovv/idoctor_platform/src/module/user_service/model"
 	"gorm.io/gorm"
 )
 
@@ -18,6 +19,8 @@ type Order struct {
 	PaymentStatus string                  `json:"payment_status" gorm:"type:varchar(50);not null"`
 	CreatedAt     *time.Time              `json:"created_at" gorm:"autoCreateTime"`
 	DeletedAt     *gorm.DeletedAt         `json:"deleted_at" gorm:"index"`
+	Client        *user_model.User        `json:"client,omitempty" gorm:"foreignKey:ClientId;references:Id"`
+	Master        *user_model.User        `json:"master,omitempty" gorm:"foreignKey:MasterId;references:Id"`
 	Parts         []part_model.Part       `json:"parts" gorm:"many2many:order_parts;"`
 	Problems      []problem_model.Problem `json:"problems" gorm:"many2many:order_problems;"`
 } // @name Order
