# src/module/part_service/dto/part_dto.go
@@ -6,6 +6,26 @@ import (
 	"github.com/Mirsadikovv/shared/response"
 )
 
+type DeviceInfo struct {
+	Id        int64  `json:"id"`
+	Name      string `json:"name"`
+	BrandName string `json:"brand_name"`
+} // @Name DeviceInfo
+
+type SupplierInfo struct {
+	Id   int64  `json:"id"`
+	Name string `json:"name"`
+} // @Name SupplierInfo
+
+type MasterInfo struct {
+	Id         int64   `json:"id"`
+	FirstName  string  `json:"first_name"`
+	LastName   string  `json:"last_name"`
+	MiddleName string  `json:"middle_name"`
+	Username   string  `json:"username"`
+	PhoneNumber *string `json:"phone_number,omitempty"`
+} // @Name MasterInfo
+
 type PartCreate struct {
 	Name       string `json:"name" validate:"required"`
 	DeviceId   int64  `json:"device_id" validate:"required"`
@@ -21,12 +41,18 @@ type PartUpdate struct {
 type PartPage = response.PageData[Part] // @name PartPage
 
 type Part struct {
-	Id         int64      `json:"id"`
-	Name       string     `json:"name"`
-	DeviceId   int64      `json:"device_id"`
-	SupplierId int64      `json:"supplier_id"`
-	CreatedAt  *time.Time `json:"created_at"`
-	DeletedAt  *time.Time `json:"deleted_at,omitempty"`
+	Id          int64         `json:"id"`
+	Name        string        `json:"name"`
+	DeviceId    int64         `json:"device_id"`
+	SupplierId  int64         `json:"supplier_id"`
+	MasterId    int64         `json:"master_id"`
+	Device      *DeviceInfo   `json:"device,omitempty"`
+	Supplier    *SupplierInfo `json:"supplier,omitempty"`
+	Master      *MasterInfo   `json:"master,omitempty"`
+	IncomePrice float64       `json:"income_price"`
+	Price       float64       `json:"price"`
+	CreatedAt   *time.Time    `json:"created_at"`
+	DeletedAt   *time.Time    `json:"deleted_at,omitempty"`
 } // @Name Part
 
 type PartParams struct {
