# src/module/part_service/model/part_model.go
@@ -3,17 +3,23 @@ package part_model
 import (
 	"time"
 
+	device_model "github.com/Mirsadikovv/idoctor_platform/src/module/device_service/model"
+	supplier_model "github.com/Mirsadikovv/idoctor_platform/src/module/supplier_service/model"
+	user_model "github.com/Mirsadikovv/idoctor_platform/src/module/user_service/model"
 	"gorm.io/gorm"
 )
 
 type Part struct {
-	Id          int64           `json:"id" gorm:"primaryKey;autoIncrement"`
-	Name        string          `json:"name" gorm:"type:varchar(255);not null"`
-	DeviceId    int64           `json:"device_id" gorm:"not null;index"`
-	SupplierId  int64           `json:"supplier_id" gorm:"not null;index"`
-	MasterId    int64           `json:"master_id" gorm:"not null;index"`
-	IncomePrice float64         `json:"income_price" gorm:"type:decimal(10,2);not null"`
-	Price       float64         `json:"price" gorm:"type:decimal(10,2);not null"`
-	CreatedAt   *time.Time      `json:"created_at" gorm:"autoCreateTime"`
-	DeletedAt   *gorm.DeletedAt `json:"deleted_at" gorm:"index"`
+	Id          int64                    `json:"id" gorm:"primaryKey;autoIncrement"`
+	Name        string                   `json:"name" gorm:"type:varchar(255);not null"`
+	DeviceId    int64                    `json:"device_id" gorm:"not null;index"`
+	SupplierId  int64                    `json:"supplier_id" gorm:"not null;index"`
+	MasterId    int64                    `json:"master_id" gorm:"not null;index"`
+	IncomePrice float64                  `json:"income_price" gorm:"type:decimal(10,2);not null"`
+	Price       float64                  `json:"price" gorm:"type:decimal(10,2);not null"`
+	CreatedAt   *time.Time               `json:"created_at" gorm:"autoCreateTime"`
+	DeletedAt   *gorm.DeletedAt          `json:"deleted_at" gorm:"index"`
+	Device      *device_model.Device     `json:"device,omitempty" gorm:"foreignKey:DeviceId;references:ID"`
+	Supplier    *supplier_model.Supplier `json:"supplier,omitempty" gorm:"foreignKey:SupplierId;references:ID"`
+	Master      *user_model.User         `json:"master,omitempty" gorm:"foreignKey:MasterId;references:Id"`
 } // @name Part
